tests/baselines/reference/S7.8.5_A1.2_T2.errors.txt
S7.8.5_A1.2_T2.ts(25,2): error TS1161: Unterminated regular expression literal.


==== S7.8.5_A1.2_T2.ts (1 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: sec-literals-regular-expression-literals
    info: |
      RegularExpressionBody ::
        RegularExpressionFirstChar RegularExpressionChars
    
      RegularExpressionChars ::
        [empty]
        RegularExpressionChars RegularExpressionChar
    
      RegularExpressionFirstChar ::
        RegularExpressionNonTerminator but not one of * or \ or / or [
    
    description: >
      The first character of a regular expression may not be "\"
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    /\/
     
!!! error TS1161: Unterminated regular expression literal.
    